<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:columnCount="2"
    android:orientation="horizontal"
    tools:context="com.example.amin.maktabprojectworldcupapp.home.HomeFragment">

    <LinearLayout
        android:id="@+id/radio_page"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_radio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/photo_album_page"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_photo_album" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_album"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chat_room_page"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_chat_room" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_room"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/survey_page"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_survey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/football_page"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_world_cup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/world_cup"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_page"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_page"
            android:textColor="@color/black" />
    </LinearLayout>


</GridLayout>
