<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.amin.maktabprojectworldcupapp.profile.ProfileFragment">

    <TextView
        android:id="@+id/user_name_txtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:text="username"
        android:gravity="center"
        android:layout_margin="16dp"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:id="@+id/user_info_txtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/user_info"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:id="@+id/invite_friend_txtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/invite_friends"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        style="?android:listSeparatorTextViewStyle"/>

    <Button
        android:id="@+id/log_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/log_out"/>

</LinearLayout>
